feat: implement dependency vulnerability scanning in CI
- Add GitHub Actions CI workflow with vulnerability scanning step
- Add security:audit script to package.json
- Add documentation in PLAN.md
- Remove completed item from BACKLOG.md

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "format": "npm run prettier:fix",
+    "security:audit": "npm audit --audit-level=high",
     "test": "jest --config=jest.config.cjs",
     "test:watch": "jest --config=jest.config.cjs --watch",
     "test:coverage": "jest --config=jest.config.cjs --coverage",
